[gd_scene load_steps=46 format=3 uid="uid://cfaiunm2kx1ph"]

[ext_resource type="Script" path="res://src/scripts/Puzzle 2/Puzzle2.gd" id="1_3gcu6"]
[ext_resource type="Texture2D" uid="uid://cpyowiueotikd" path="res://src/art/Main and Puzzle Select/Puzzle_Select_Elements-1.png" id="2_yuwlo"]
[ext_resource type="Texture2D" uid="uid://telxoydmg7ye" path="res://src/art/Main and Puzzle Select/Puzzle 2/Puzzle 2 Indicator.png" id="3_hrruk"]
[ext_resource type="Texture2D" uid="uid://cgqjij2g8o47i" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Normal.png" id="4_gmqye"]
[ext_resource type="Script" path="res://src/scripts/workspace.gd" id="4_qe1px"]
[ext_resource type="Texture2D" uid="uid://475uhstd1i6a" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Clicked.png" id="5_mvti7"]
[ext_resource type="Texture2D" uid="uid://du3kls6hqnyjt" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Selected.png" id="6_87p1y"]
[ext_resource type="Texture2D" uid="uid://fuwbcduqwn3y" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Normal.png" id="7_sw0el"]
[ext_resource type="Texture2D" uid="uid://hsy0x5k6md1t" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Clicked.png" id="8_v1hco"]
[ext_resource type="Texture2D" uid="uid://c60a1ysuwtits" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Selected.png" id="9_dt1wg"]
[ext_resource type="Texture2D" uid="uid://gd0qcemqdlii" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Normal.png" id="10_cs8lh"]
[ext_resource type="Texture2D" uid="uid://wa262r6jtxsi" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Clicked.png" id="11_btpa2"]
[ext_resource type="Texture2D" uid="uid://rxwacwm75vg5" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Selected.png" id="12_sumkl"]
[ext_resource type="Texture2D" uid="uid://cn17xogji8mmu" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Normal.png" id="13_bmwiv"]
[ext_resource type="Texture2D" uid="uid://dc7v14y7n0j45" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Clicked.png" id="14_261r1"]
[ext_resource type="Texture2D" uid="uid://k3jaoylpso1q" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Selected.png" id="15_gvlh8"]
[ext_resource type="Texture2D" uid="uid://cmp1nlgjpx3fv" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Normal.png" id="16_j57es"]
[ext_resource type="Texture2D" uid="uid://cr0xq7frplu8l" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Clicked.png" id="17_otskw"]
[ext_resource type="Texture2D" uid="uid://bdrqdfwqi23wc" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Selected.png" id="18_3lf8c"]
[ext_resource type="Texture2D" uid="uid://q5bgyubyxf20" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Normal.png" id="19_ij3qj"]
[ext_resource type="Texture2D" uid="uid://b4wk3y71qgni1" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Clicked.png" id="20_0cxyu"]
[ext_resource type="Texture2D" uid="uid://bdhtfj0nyogas" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Selected.png" id="21_apt7e"]
[ext_resource type="Texture2D" uid="uid://c7rxemp8euioy" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Normal.png" id="22_g21yr"]
[ext_resource type="Texture2D" uid="uid://c4jtrmbxiv6n1" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Clicked.png" id="23_mnvrr"]
[ext_resource type="Texture2D" uid="uid://cafg38eegiwk8" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Selected.png" id="24_l3yfk"]
[ext_resource type="PackedScene" uid="uid://bhlt8k8851465" path="res://src/scenes/Puzzle 1/Puzzle Pieces/Searchbar 1/search_grab_zone.tscn" id="26_6pado"]
[ext_resource type="Texture2D" uid="uid://btafu8sdwcfgt" path="res://src/art/slot.png" id="27_h3dm1"]
[ext_resource type="Script" path="res://src/scripts/Puzzle 2/search_grab_zone.gd" id="27_tnn3g"]
[ext_resource type="Script" path="res://src/scripts/account_grab_zone.gd" id="28_s8faf"]
[ext_resource type="Texture2D" uid="uid://b5rt40hrgbk5p" path="res://src/art/Main and Puzzle Select/Puzzle 2/Account.png" id="29_n0x01"]
[ext_resource type="Script" path="res://src/scripts/ad_section_grab_zone.gd" id="30_sh03j"]
[ext_resource type="Texture2D" uid="uid://d2k2y3ydkg0oi" path="res://src/art/Main and Puzzle Select/Puzzle 2/Ad Section.png" id="31_8lqvp"]
[ext_resource type="Texture2D" uid="uid://0dh86whwnbj6" path="res://src/art/Main and Puzzle Select/Puzzle 2/Category Bar.png" id="32_3o6f0"]
[ext_resource type="Script" path="res://src/scripts/category_bar_grab_zone.gd" id="32_vx23i"]
[ext_resource type="Script" path="res://src/scripts/location_grab_zone.gd" id="34_v6csn"]
[ext_resource type="Texture2D" uid="uid://cjm6ur0fqvyer" path="res://src/art/Main and Puzzle Select/Puzzle 2/Location.png" id="35_3ui0q"]
[ext_resource type="Script" path="res://src/scripts/sahara_grab_zone.gd" id="36_04pix"]
[ext_resource type="Texture2D" uid="uid://bgcwf78ugm8l2" path="res://src/art/Main and Puzzle Select/Puzzle 2/Sahara.png" id="36_shblo"]
[ext_resource type="Script" path="res://src/scripts/shopping_bag_grab_zone.gd" id="39_t4d3y"]
[ext_resource type="Texture2D" uid="uid://ci3qvsks5pivl" path="res://src/art/Main and Puzzle Select/Puzzle 2/Shopping Bag.png" id="40_nys0o"]
[ext_resource type="Script" path="res://src/scripts/shopping_section_grab_zone.gd" id="41_f1v0a"]
[ext_resource type="Texture2D" uid="uid://cvnk7ehmeb0ax" path="res://src/art/Main and Puzzle Select/Puzzle 2/Shopping Section.png" id="41_t56h6"]
[ext_resource type="Texture2D" uid="uid://cvgk3uub8vloo" path="res://src/art/Main and Puzzle Select/Puzzle 2/Shopping Subsection.png" id="42_duyro"]
[ext_resource type="Script" path="res://src/scripts/shopping_subsection_grab_zone.gd" id="43_2jgsi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o48kp"]
radius = 60.0
height = 248.0

[node name="Puzzle2" type="Node"]
script = ExtResource("1_3gcu6")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yuwlo")
expand_mode = 1

[node name="WebTemplate" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hrruk")
expand_mode = 1
stretch_mode = 4

[node name="Container" type="Container" parent="WebTemplate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -891.0
offset_top = -848.0
offset_right = 509.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_qe1px")

[node name="Home_Confirm_Btn" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1538.0
offset_top = 959.0
offset_right = -35.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Home_Confirm_Btn"]
layout_mode = 2
columns = 2

[node name="HomeBtn" type="TextureButton" parent="Home_Confirm_Btn/GridContainer"]
custom_minimum_size = Vector2(175, 75)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("4_gmqye")
texture_pressed = ExtResource("5_mvti7")
texture_hover = ExtResource("6_87p1y")
ignore_texture_size = true
stretch_mode = 4

[node name="ConfirmBtn" type="TextureButton" parent="Home_Confirm_Btn/GridContainer"]
custom_minimum_size = Vector2(175, 75)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("7_sw0el")
texture_pressed = ExtResource("8_v1hco")
texture_hover = ExtResource("9_dt1wg")
ignore_texture_size = true
stretch_mode = 4

[node name="Info_Container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1324.0
offset_top = 141.0
offset_right = -459.0
offset_bottom = -871.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoHintContainer" type="GridContainer" parent="Info_Container"]
clip_contents = true
layout_direction = 3
layout_mode = 2
columns = 2

[node name="InfoBtn" type="TextureButton" parent="Info_Container/InfoHintContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("10_cs8lh")
texture_pressed = ExtResource("11_btpa2")
texture_hover = ExtResource("12_sumkl")
ignore_texture_size = true
stretch_mode = 0

[node name="HintBtn" type="TextureButton" parent="Info_Container/InfoHintContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("13_bmwiv")
texture_pressed = ExtResource("14_261r1")
texture_hover = ExtResource("15_gvlh8")
ignore_texture_size = true
stretch_mode = 4

[node name="Edit_Container" type="MarginContainer" parent="."]
offset_left = 251.0
offset_top = 146.0
offset_right = 438.0
offset_bottom = 210.0

[node name="GridContainer" type="GridContainer" parent="Edit_Container"]
layout_mode = 2
columns = 3

[node name="UndoBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("16_j57es")
texture_pressed = ExtResource("17_otskw")
texture_hover = ExtResource("18_3lf8c")
ignore_texture_size = true
stretch_mode = 4

[node name="RedoBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("19_ij3qj")
texture_pressed = ExtResource("20_0cxyu")
texture_hover = ExtResource("21_apt7e")
ignore_texture_size = true
stretch_mode = 4

[node name="RefreshBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("22_g21yr")
texture_pressed = ExtResource("23_mnvrr")
texture_hover = ExtResource("24_l3yfk")
ignore_texture_size = true
stretch_mode = 4

[node name="UI Tray" type="ScrollContainer" parent="."]
offset_left = 1541.0
offset_top = 53.0
offset_right = 1880.0
offset_bottom = 935.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
vertical_scroll_mode = 2

[node name="Vertical Box Container" type="VBoxContainer" parent="UI Tray"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot" parent="UI Tray/Vertical Box Container" instance=ExtResource("26_6pado")]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("27_tnn3g")

[node name="Account" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("28_s8faf")

[node name="Small Account" type="TextureRect" parent="UI Tray/Vertical Box Container/Account"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("29_n0x01")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Account"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Account/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Ad section" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("30_sh03j")

[node name="Small Ad section" type="TextureRect" parent="UI Tray/Vertical Box Container/Ad section"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("31_8lqvp")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Ad section"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Ad section/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Category Bar" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("32_vx23i")

[node name="Small Category Bar" type="TextureRect" parent="UI Tray/Vertical Box Container/Category Bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("32_3o6f0")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Category Bar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Category Bar/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Location" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("34_v6csn")

[node name="Small Location" type="TextureRect" parent="UI Tray/Vertical Box Container/Location"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("35_3ui0q")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Location"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Location/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Sahara" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("36_04pix")

[node name="Small Sahara" type="TextureRect" parent="UI Tray/Vertical Box Container/Sahara"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("36_shblo")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Sahara"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Sahara/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Shopping Bag" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("39_t4d3y")

[node name="Small Shopping Bag" type="TextureRect" parent="UI Tray/Vertical Box Container/Shopping Bag"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("40_nys0o")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Shopping Bag"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Shopping Bag/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Shopping Section" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("41_f1v0a")

[node name="Small Shopping Section" type="TextureRect" parent="UI Tray/Vertical Box Container/Shopping Section"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("41_t56h6")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Shopping Section"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Shopping Section/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Shopping Subsection" type="TextureRect" parent="UI Tray/Vertical Box Container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")
script = ExtResource("43_2jgsi")

[node name="Small Shopping Subsection" type="TextureRect" parent="UI Tray/Vertical Box Container/Shopping Subsection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("42_duyro")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="UI Tray/Vertical Box Container/Shopping Subsection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI Tray/Vertical Box Container/Shopping Subsection/Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o48kp")

[node name="Slot 3" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 4" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 5" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 6" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 7" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 8" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Slot 9" type="TextureRect" parent="UI Tray/Vertical Box Container"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("27_h3dm1")

[node name="Workspace" type="Node" parent="."]

[connection signal="pressed" from="Home_Confirm_Btn/GridContainer/HomeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="Home_Confirm_Btn/GridContainer/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="Info_Container/InfoHintContainer/InfoBtn" to="." method="_on_info_btn_pressed"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Account/Area2D" to="UI Tray/Vertical Box Container/Account" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Account/Area2D" to="UI Tray/Vertical Box Container/Account" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Account/Area2D" to="UI Tray/Vertical Box Container/Account" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Ad section/Area2D" to="UI Tray/Vertical Box Container/Ad section" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Ad section/Area2D" to="UI Tray/Vertical Box Container/Ad section" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Ad section/Area2D" to="UI Tray/Vertical Box Container/Ad section" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Category Bar/Area2D" to="UI Tray/Vertical Box Container/Category Bar" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Category Bar/Area2D" to="UI Tray/Vertical Box Container/Category Bar" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Category Bar/Area2D" to="UI Tray/Vertical Box Container/Category Bar" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Location/Area2D" to="UI Tray/Vertical Box Container/Location" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Location/Area2D" to="UI Tray/Vertical Box Container/Location" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Location/Area2D" to="UI Tray/Vertical Box Container/Location" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Sahara/Area2D" to="UI Tray/Vertical Box Container/Sahara" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Sahara/Area2D" to="UI Tray/Vertical Box Container/Sahara" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Sahara/Area2D" to="UI Tray/Vertical Box Container/Sahara" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Shopping Bag/Area2D" to="UI Tray/Vertical Box Container/Shopping Bag" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Shopping Bag/Area2D" to="UI Tray/Vertical Box Container/Shopping Bag" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Shopping Bag/Area2D" to="UI Tray/Vertical Box Container/Shopping Bag" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Shopping Section/Area2D" to="UI Tray/Vertical Box Container/Shopping Section" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Shopping Section/Area2D" to="UI Tray/Vertical Box Container/Shopping Section" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Shopping Section/Area2D" to="UI Tray/Vertical Box Container/Shopping Section" method="_on_area_2d_input_event"]
[connection signal="area_shape_entered" from="UI Tray/Vertical Box Container/Shopping Subsection/Area2D" to="UI Tray/Vertical Box Container/Shopping Subsection" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="UI Tray/Vertical Box Container/Shopping Subsection/Area2D" to="UI Tray/Vertical Box Container/Shopping Subsection" method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="UI Tray/Vertical Box Container/Shopping Subsection/Area2D" to="UI Tray/Vertical Box Container/Shopping Subsection" method="_on_area_2d_input_event"]
